fixed gutters showing in health/armor progress bar causing overflow

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -682,6 +682,12 @@ body {
 	font-size: 1.2em;
 }
 
+.row.no-gutters  > [class^="col-"],
+.row.no-gutters > [class*=" col-"] {
+	padding-right: 0;
+	padding-left: 0;
+}
+
 @media (max-width: 480px) {
 	.navbar-default .navbar-brand {
 		padding-left: 124px;
